Fixed fonts and spacing issues!

--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,7 @@
 @font-face {
     font-family: 'Wisdom Script Regular';
     font-style: normal;
-    font-weight: normal;
     src: local('../Wisdom Script Regular'), /*EDITOR DOESN'T LIKE THE QUOTES HERE. WHY?*/
-        /*local(../'Wisdom Script AJ.woff'),*/
         url('../Wisdom Script AJ.woff') format('woff');
 }
 
@@ -17,24 +15,21 @@ span, nav, #welcome h2 {
     color: #77a466;
 }
 
-#footer span {
-    text-transform: lowercase;
+nav li, #specials li {
+    font-weight: bold;
 }
 
 h1, h2, h3 {
     text-transform: uppercase;
+    font-weight: bold;
 }
 
-p { /* IS THIS EVEN DOING ANYTHING? */
-    font-weight: 600;
+#footer span {
+    text-transform: lowercase;
 }
-
-/*header, #welcome { /*** removed at Caroline's suggestion ***
-    padding-left: 25px;
-}*/
 
 /***** GRID *****/
-/**** took this out because it was pushing everything left; put it back at Sharon's suggestion :) ***/
+
 .full-width {  
     margin: 0 auto;
     overflow: auto;
@@ -42,32 +37,26 @@ p { /* IS THIS EVEN DOING ANYTHING? */
 }
 
 /***** HEADER *****/ 
-/*** ? - WHY IS THE NAV SO FAR FROM RIGHT MARGIN? ***/
 
 .title {
     float: left;
-    font-family: 'Montserrat 900', sans-serif;
-    font-weight: bold;
-    width: 500px; /*600px*//*50% worked, but Sharon suggested not using % yet*/
+    font-family: 'Montserrat', sans-serif;
+    width: 500px;
 }
 
 nav {
     float: right; 
-    /*font-size: 10px; * THIS DOESN'T APPEAR TO CHANGE THE NAV FONT SIZE*/
-    width: 700px; /*650px*600px*//*50% worked, but Sharon suggested not using % yet*/
 }
 
-nav ul li{ /*** ? - SEPARATE OUT THE UL AND THE LI? ***/
+nav ul li{
     display: inline-block;
-    /*font-size: 10px; * THIS DOESN'T APPEAR TO CHANGE THE NAV FONT SIZE*/
-    padding-left: 29px; /*29px*/
+    padding-left: 29px;
     padding-top: 20px;
 }
 
 nav ul li a {
     color: #77a466;
     font-size: 15px;
-    font-weight: bold;
     text-transform: uppercase;
     text-decoration: none;
 }
@@ -80,12 +69,10 @@ nav ul li a {
 }
 
 #welcome h2 {
-    font-weight: 600;
-    padding-top: 10px; /*80px*/
+    padding-top: 10px;
 }
 
-#welcome p { /*** ? - WHY DOES THIS P EXTEND FURTHER RIGHT THAN THE NAV BAR? ***/
-    font-weight: 600;
+#welcome p {
     margin-bottom: 30px;
 }
 
@@ -94,9 +81,9 @@ nav ul li a {
 #specials {
     border-right: 1px solid grey; 
     float: left;
-    height: 250px; /*300*/
+    height: 250px;
     margin: 0px 20px 0px 0px;
-    padding: 10px; /*20px*/
+    padding: 10px;
     width: 350px;
 }
 
@@ -117,7 +104,6 @@ nav ul li a {
     width: 450px;
 }
 
-
 /***** CONTACT *****/
 
 #contact {
@@ -125,7 +111,7 @@ nav ul li a {
     height: 250px;
     margin: 0px 0px 0px 20px;
     padding: 10px;
-    width: 270px; /*250*/
+    width: 270px;
 }
 
 #contact p {
@@ -133,7 +119,6 @@ nav ul li a {
 }
 
 /***** FOOTER *****/
-/*** ? - WHY IS THE FOOTER NOT CENTERED? ***/
 
 #footer {
     border-top: 1px solid grey;
